--- a/src/Modules/Laser.Orchard.Questionnaires/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Questionnaires/App_Data/Localization/it-IT/orchard.module.po
@@ -8,34 +8,6 @@
 # > msgid "{ identificativo del messaggio }"
 # > msgstr "{ messaggio }"
 
-msgctxt "~/Modules/Laser.Orchard.Questionnaires/Controllers/QuestionnaireController.cs"
-msgid "Invalid captcha!"
-msgstr "reCaptcha non corretto!"
-
-msgctxt "~/Modules/Laser.Orchard.Questionnaires/Controllers/QuestionnaireController.cs"
-msgid "Please, accept our terms and conditions!"
-msgstr "Si prega di accettare i termini e le condizioni del servizio!"
-
-msgctxt "~/Modules/Laser.Orchard.Questionnaires/ViewModels/ValidationProvider.cs"
-msgid "You have to answer to {0}"
-msgstr "Domanda {0} obbligatoria"
-
-msgctxt "~/Modules/Laser.Orchard.Questionnaires/ViewModels/ValidationProvider.cs"
-msgid "Your answer to {0} must be a valid date"
-msgstr "La risposta alla domanda {0} deve essere una data valida"
-
-msgctxt "~/Modules/Laser.Orchard.Questionnaires/ViewModels/ValidationProvider.cs"
-msgid "Your answer to {0} must be a valid date and time"
-msgstr "La risposta alla domanda {0} deve essere una data e ora valida"
-
-msgctxt "~/Modules/Laser.Orchard.Questionnaires/ViewModels/ValidationProvider.cs"
-msgid "Your answer to {0} must be a valid email address"
-msgstr "La risposta alla domanda {0} deve essere un indirizzo email valido"
-
-msgctxt "~/Modules/Laser.Orchard.Questionnaires/ViewModels/ValidationProvider.cs"
-msgid "Your answer to {0} must be a valid internet address"
-msgstr "La risposta alla domanda {0} deve essere un indirizzo internet valido"
-
 msgctxt "~/Modules/Laser.Orchard.Questionnaires/Views/AdminRanking/GetList.cshtml"
 msgid "AccessSecured"
 msgstr "Accesso sicuro"
@@ -237,8 +209,8 @@ msgid "Default 0 (no limit)"
 msgstr "Valore predefinito 0 (nessun limite)"
 
 msgctxt "~/Modules/Laser.Orchard.Questionnaires/Views/DefinitionTemplates/QuestionnairesPartSettingVM.cshtml"
-msgid "Default is false."
-msgstr "Il valore di default è falso."
+msgid "Default is false. "
+msgstr "Il valore predefinito è falso."
 
 msgctxt "~/Modules/Laser.Orchard.Questionnaires/Views/DefinitionTemplates/QuestionnairesPartSettingVM.cshtml"
 msgid "Default is false. If selected a Correct Response Option will be visible in back office"
@@ -695,6 +667,22 @@ msgstr "Spiacente, hai già compilato questo questionario."
 msgctxt "Laser.Orchard.Questionnaires.Controllers.QuestionnaireController"
 msgid "Thank you for submitting your feedback."
 msgstr "Grazie per averci inviato la tua opinione."
+
+msgctxt "Laser.Orchard.Questionnaires.Controllers.QuestionnaireResponseController"
+msgid "Questionnaire already submitted."
+msgstr "Questionario già inviato."
+
+msgctxt "Laser.Orchard.Questionnaires.Controllers.QuestionnaireResponseController"
+msgid "Validation:"
+msgstr "Validazione:"
+
+msgctxt "Laser.Orchard.Questionnaires.Controllers.QuestionnaireResponseController"
+msgid "Validation: data list is empty."
+msgstr "Validazione: la lista dei dati è vuota."
+
+msgctxt "Laser.Orchard.Questionnaires.Controllers.QuestionnaireResponseController"
+msgid "Validation: invalid input data structure."
+msgstr "Validazione: la struttura dei dati in input non è valida."
 
 msgctxt "Laser.Orchard.Questionnaires.Controllers.QuestionnaireStatsController"
 msgid "Export started. Please check 'Show Exported Files' in a few minutes to get the result."
