push retry: fixed some translations, renamed a file and added a notification

--- a/src/Modules/Laser.Orchard.Mobile/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Mobile/App_Data/Localization/it-IT/orchard.module.po
@@ -233,6 +233,10 @@ msgid "Retry is running. Please wait for its completion and reload this page."
 msgstr "È in corso il tentativo di reinvio. Attendere il suo completamento e ricaricare la pagina."
 
 msgctxt "~/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml"
+msgid "Retry successfully planned."
+msgstr "Reinvio pianificato correttamente."
+
+msgctxt "~/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml"
 msgid "Select Devices"
 msgstr "Seleziona Dispositivi"
 
