--- a/src/Modules/Laser.Orchard.NewsLetters/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.NewsLetters/App_Data/Localization/it-IT/orchard.module.po
@@ -49,8 +49,8 @@ msgid "Announcement Item"
 msgstr "Comunicati"
 
 msgctxt "~/Modules/Laser.Orchard.NewsLetters/Views/EditorTemplates/Parts/NewsletterEdition_Edit.cshtml"
-msgid "Newsletter Edition"
-msgstr "Edizione Newsletter"
+msgid "Newsletter edition"
+msgstr "Edizione"
 
 msgctxt "~/Modules/Laser.Orchard.NewsLetters/Views/EditorTemplates/Parts/NewsletterEdition_Edit.cshtml"
 msgid "Newsletter Edition Infos"
