--- a/src/Modules/Laser.Orchard.Vimeo/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Vimeo/App_Data/Localization/it-IT/orchard.module.po
@@ -148,6 +148,10 @@ msgctxt "~/Modules/Laser.Orchard.Vimeo/Views/BackendUpload/Index.cshtml"
 msgid "Uploading: do not leave this page or close the browser."
 msgstr "Upload in corso: non lasciare la pagina o chiudere il browser."
 
+msgctxt "~/Modules/Laser.Orchard.Vimeo/Views/EditorTemplates/VimeoAccessTokenViewModel.cshtml"
+msgid "Authorized Access Token"
+msgstr "Token di accesso autorizzato"
+
 msgctxt "Laser.Orchard.Vimeo.Activities.VimeoVideoActivity"
 msgid "Done"
 msgstr "Fatto"
