--- a/src/Modules/Laser.Orchard.AdvancedSearch/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.AdvancedSearch/App_Data/Localization/it-IT/orchard.module.po
@@ -133,8 +133,8 @@ msgid "Manage {0} Content"
 msgstr "Gestire Contenuto {0}"
 
 msgctxt "~/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml"
-msgid "Manage content"
-msgstr "Gestisci contenuto"
+msgid "Manage Content"
+msgstr "Gestire Contenuto"
 
 msgctxt "~/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml"
 msgid "Not translated to: {0}"
