--- a/src/Themes/ResponsiveBaseTheme/App_Data/Localization/it-IT/orchard.theme.po
+++ b/src/Themes/ResponsiveBaseTheme/App_Data/Localization/it-IT/orchard.theme.po
@@ -12,6 +12,10 @@ msgctxt "~/Themes/ResponsiveBaseTheme/Views/BadgeOfHonor.cshtml"
 msgid "&#169; The Theme Machine 2010."
 msgstr "&#169; Il Tema Macchina 2010."
 
+msgctxt "~/Themes/ResponsiveBaseTheme/Views/BadgeOfHonor.cshtml"
+msgid "Powered by <a href=\"{0}\" target=\"_blank\">Orchard</a>"
+msgstr "Offerto da <a href=\"{0}\" target=\"_blank\">Orchard</a>"
+
 msgctxt "~/Themes/ResponsiveBaseTheme/Views/Fields.ContentPicker-AsideSecond-ProdottiEccellenze.cshtml"
 msgid "more"
 msgstr "di più"
