add missing translation

--- a/src/Modules/Laser.Orchard.NewsLetters/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.NewsLetters/App_Data/Localization/it-IT/orchard.module.po
@@ -53,6 +53,10 @@ msgid "Newsletter edition"
 msgstr "Edizione"
 
 msgctxt "~/Modules/Laser.Orchard.NewsLetters/Views/EditorTemplates/Parts/NewsletterEdition_Edit.cshtml"
+msgid "Newsletter Edition"
+msgstr "Edizione"
+
+msgctxt "~/Modules/Laser.Orchard.NewsLetters/Views/EditorTemplates/Parts/NewsletterEdition_Edit.cshtml"
 msgid "Newsletter Edition Infos"
 msgstr "Inforrmazioni sull'Edizione della Newsletter"
 
