--- a/src/Modules/Laser.Orchard.AdvancedSearch/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.AdvancedSearch/App_Data/Localization/it-IT/orchard.module.po
@@ -137,6 +137,10 @@ msgid "Manage Content"
 msgstr "Gestire Contenuto"
 
 msgctxt "~/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml"
+msgid "Manage content"
+msgstr "Gestire contenuto"
+
+msgctxt "~/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml"
 msgid "Not translated to: {0}"
 msgstr "Non tradotto in: {0}"
 
