--- a/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Cookies/App_Data/Localization/it-IT/orchard.module.po
@@ -112,6 +112,18 @@ msgctxt "~/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts/CookieLawWi
 msgid "Your privacy policy / Cookie policy link"
 msgstr "Link Informativa sulla Privacy / Informativa sui Cookie"
 
+msgctxt "~/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts/HubSpotSettings.cshtml"
+msgid "Add HubSpot App ID"
+msgstr "Aggiungi l'App ID di HubSpot"
+
+msgctxt "~/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts/HubSpotSettings.cshtml"
+msgid "Hub Spot"
+msgstr "Hub Spot"
+
+msgctxt "~/Modules/Laser.Orchard.Cookies/Views/EditorTemplates/Parts/HubSpotSettings.cshtml"
+msgid "HubSpot App ID"
+msgstr "App ID di HubSpot"
+
 msgctxt "~/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml"
 msgid "Change your choice"
 msgstr "Cambia la tua scelta"
