--- a/src/Modules/Laser.Orchard.StartupConfig/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.StartupConfig/App_Data/Localization/it-IT/orchard.module.po
@@ -112,6 +112,14 @@ msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/DefinitionTemplates/Parts/C
 msgid "Fields Filter"
 msgstr "Filtro Campi"
 
+msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/DefinitionTemplates/PerItemCachePartSettings.cshtml"
+msgid "hint"
+msgstr "suggerimento"
+
+msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/DefinitionTemplates/PerItemCachePartSettings.cshtml"
+msgid "New Cache Key"
+msgstr "Nuova chiave di cache"
+
 msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/DefinitionTemplates/UserGroupSettings.cshtml"
 msgid "If checked, the part will be mandatory."
 msgstr "Se selezionato, la parte sarà obbligatoria."
@@ -251,6 +259,14 @@ msgstr "Inserire il nome della cartella (opzionale). Se vuoto, sarà creato in a
 msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/OwnedFolder_Edit.cshtml"
 msgid "User default owned folder"
 msgstr "Cartella di default di proprietà dell'utente"
+
+msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/PerItemCachePart_Edit.cshtml"
+msgid "hint"
+msgstr "suggerimento"
+
+msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/PerItemCachePart_Edit.cshtml"
+msgid "New Cache Key"
+msgstr "Nuova chiave di cache"
 
 msgctxt "~/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/ProtectionSettingsPart.Edit.cshtml"
 msgid "A list of MVC Area.Controller.Action entries. When defined, using comma separated values, protects entries from unauthorized calls."
@@ -1143,6 +1159,10 @@ msgstr "Uno o più parametri sono nulli"
 msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
 msgid "Successfully Executed"
 msgstr "Eseguito con successo"
+
+msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
+msgid "Thank you for registering. We sent you an e-mail with instructions to enable your account."
+msgstr "Grazie per esserti registrato. Ti abbiamo inviato una e-mail con le istruzioni per attivare la tua utenza."
 
 msgctxt "Laser.Orchard.StartupConfig.Services.UtilsServices"
 msgid "UnAuthorized Action"
