--- a/src/Modules/Laser.Orchard.Events/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Events/App_Data/Localization/it-IT/orchard.module.po
@@ -388,6 +388,38 @@ msgctxt "Laser.Orchard.Events.Projections.ActivityStartDateSortCriterionProvider
 msgid "Starting date of the event"
 msgstr "Data di inizio dell'evento"
 
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "Activity End Date"
+msgstr "Data di fine dell'attività"
+
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "Activity End Date (as String)"
+msgstr "Data fine attività (come stringa)"
+
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "Activity Start Date"
+msgstr "Data di inizio dell'attività"
+
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "Activity Start Date (as String)"
+msgstr "Data inizio attività (come stringa)"
+
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "End date of Activity"
+msgstr "Data di fine dell'attività"
+
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "Start date of Activity"
+msgstr "Data d'inizio dell'attività"
+
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "String representing the end date of Activity"
+msgstr "Stringa che rappresenta la data di fine dell'attività"
+
+msgctxt "Laser.Orchard.Events.Tokens.ActivityPartTokens"
+msgid "String representing the start date of Activity"
+msgstr "Stringa che rappresenta la data d'inizio dell'attività"
+
 msgctxt "Laser.Orchard.Events.Tokens.EventTokens"
 msgid "End date of the parent Calendar"
 msgstr "Data di fine del Calendario padre"
