--- a/src/Modules/Laser.Orchard.OpenAuthentication/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.OpenAuthentication/App_Data/Localization/it-IT/orchard.module.po
@@ -45,12 +45,28 @@ msgid "The name that will be used internally."
 msgstr "Nome che verrà usato internamente."
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/CreateProvider.cshtml"
+msgid "This is the key. If Apple Authentication Provider is selected, this is the Services ID."
+msgstr "Questa è la chiave.  Se è selezionato il provider di autenticazione Apple, questo è il Services ID."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/CreateProvider.cshtml"
+msgid "This is the secret. If Apple Authentication Provider is selected, this is the name of Private Key file (.p8) in App_Data/Sites/tenant folder."
+msgstr "Questo è il secret.  Se è selezionato il provider di autenticazione Apple, questo è il nome del file Private Key (.p8) nella cartella App_Data/Sites/tenant.."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/CreateProvider.cshtml"
 msgid "This is the url to the end point."
 msgstr "Questo è l'URL dell'end point."
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/CreateProvider.cshtml"
+msgid "This is the url to the end point. If Apple Authentication Provider is selected, this is the Key ID."
+msgstr "Questo è l'URL dell'end point. Se è selezionato il provider di autenticazione Apple, questo è il Key ID."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/CreateProvider.cshtml"
 msgid "This is the User Name."
 msgstr "Questo è il Nome Utente."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/CreateProvider.cshtml"
+msgid "This is the User Name. If Apple Authentication Provider is selected, this is the Team ID."
+msgstr "Questo è il nome utente. Se è selezionato il provider di autenticazione Apple, questo è il Team ID."
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/CreateProvider.cshtml"
 msgid "This is the value that is shown to the User."
@@ -97,12 +113,28 @@ msgid "The name that will be used internally."
 msgstr "Nome che verrà usato internamente."
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml"
+msgid "This is the key. If Apple Authentication Provider is selected, this is the Services ID."
+msgstr "Questa è la chiave.  Se è selezionato il provider di autenticazione Apple, questo è il Services ID."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml"
+msgid "This is the secret. If Apple Authentication Provider is selected, this is the name of Private Key file (.p8) in App_Data/Sites/tenant folder."
+msgstr "Questo è il secret.  Se è selezionato il provider di autenticazione Apple, questo è il nome del file Private Key (.p8) nella cartella App_Data/Sites/tenant.."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml"
 msgid "This is the url to the end point."
 msgstr "Questo è l'URL dell'end point."
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml"
+msgid "This is the url to the end point. If Apple Authentication Provider is selected, this is the Key ID."
+msgstr "Questo è l'URL dell'end point. Se è selezionato il provider di autenticazione Apple, questo è il Key ID."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml"
 msgid "This is the User Name."
 msgstr "Questo è il Nome Utente."
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml"
+msgid "This is the User Name. If Apple Authentication Provider is selected, this is the Team ID."
+msgstr "Questo è il nome utente. Se è selezionato il provider di autenticazione Apple, questo è il Team ID."
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml"
 msgid "This is the value that is shown to the User."
@@ -273,6 +305,10 @@ msgid "Username"
 msgstr "Nome utente"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
+msgid " and must contain at least "
+msgstr "e deve contenere almeno"
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
 msgid "Account creation was unsuccessful. Please correct the errors and try again."
 msgstr "La creazione dell'account non è riuscita. Correggere gli errori e riprovare."
 
@@ -297,8 +333,28 @@ msgid "External Service Association"
 msgstr "Associazione Servizi Esterni"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
+msgid "one lowercase letter"
+msgstr "una lettera minuscola"
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
+msgid "one number"
+msgstr "un numero"
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
+msgid "one special character"
+msgstr "un carattere speciale"
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
+msgid "one uppercase letter"
+msgstr "una lettera maiuscola"
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
 msgid "Password:"
 msgstr "Password"
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
+msgid "Passwords are required to be a minimum of {0} characters in length"
+msgstr "La password deve essere lunga almeno {0} caratteri"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
 msgid "Passwords are required to be a minimum of {0} characters in length."
@@ -307,6 +363,10 @@ msgstr "Le password devono essere lunghe almeno {0} caratteri."
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
 msgid "Register"
 msgstr "Registra"
+
+msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
+msgid "The password can't be empty"
+msgstr "La password non può essere vuota"
 
 msgctxt "~/Modules/Laser.Orchard.OpenAuthentication/Views/OpenAuthRegister.cshtml"
 msgid "This user account will be linked to <b>{0}</b> when you login."
